--- a/projects/frontend-react/package.json
+++ b/projects/frontend-react/package.json
@@ -14,7 +14,12 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-flow-strip-types": "^7.14.5",
+    "@testing-library/dom": "^8.11.1",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/core": "^7.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
